Added more files

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </a>
         </div>
         <div class="work">
-          <a href="https://swazeyjessup.github.io/unit-4-game/">
-          <img src="assets/images/gempink.jpeg" alt="RPG Game">
-          <h3>Crystal Collector</h3>
+          <a href="https://obscure-dusk-68355.herokuapp.com/main">
+          <img src="assets/images/quarantine.png" alt="RPG Game">
+          <h3>Quarantine Co-Op</h3>
         </a>
         </div>
         <div class="work">
@@ -92,7 +92,7 @@
       <h1 id="contact">Contact</h1>
 
 
-<div class="sub-container center">
+<div class="sub-container ">
       <a href="https://github.com/swazeyjessup" target="_blank"><img src="assets/images/github.jpg" style=" height: 175px; weight: 175px;"></a> &ensp;
       <a href="mailto:swazey_jessup@hotmail.com" target="_blank"><img src="assets/images/email.jpeg" style=" height: 175px; weight: 175px;"></a> &ensp;
       <a href="https://www.linkedin.com/in/swazey-jessup-40730a14a/" target="_blank"><img src="assets/images/linkedin.png" style=" height: 175px; weight: 175px;"></a>
